add: 특정 루틴 모음 정보 반환 api 추가